--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,18 +1,37 @@
-<!--
-  Generated template for the LoginPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>Login</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
 <ion-content padding>
+
+  <ion-grid>
+
+    <ion-row>
+      <ion-col>
+        <img src="assets/images/logo.png" class="logo"/>]
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col>
+        <p>
+          Camper chat allows you to talk to other
+          <strong>caravaners, RV'ers roadtrippers and campers </strong>
+          near you. Use Camper Chat to give and receive tips, ask for help with your flat tyre,
+          or just have a friendly chat.
+        </p>
+        <p>
+          Log in with
+          <strong>Facebook</strong>
+          below to get started.
+        </p>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col>
+        <a (click)="login()">
+          <img src="assets/images/login-facebook.png">
+        </a>
+      </ion-col>
+    </ion-row>
+
+  </ion-grid>
 
 </ion-content>
