--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -4,7 +4,7 @@
 
     <ion-row>
       <ion-col>
-        <img src="assets/images/logo.png" class="logo"/>]
+        <img src="assets/images/logo.png" class="logo"/>
       </ion-col>
     </ion-row>
 
